manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: collections-api
spec:
 replicas: 2
 selector:
   matchLabels:
     app: collections-api
 template:
   metadata:
     labels:
       app: collections-api
   spec:
     imagePullSecrets:
     - name: dockerhub-secret
     containers:
     - name: collections-api
       image: aluna1997/collections-api:2.0
       ports:
       - containerPort: 8000
       resources:
         requests:
           memory: "128Mi"
           cpu: "100m"
         limits:
           memory: "256Mi"
           cpu: "500m"
