manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collections-api-service
spec:
  selector:
    app: collections-api
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
