manifest/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: whitelist-api-route
spec:
  to:
    kind: Service
    name: whitelist-api-service
  port:
    targetPort: 8000
